kubernetes_ingress/ingress-path-based.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.xmlunit.org
    http:
      paths:
      - path: /static
        backend:
          serviceName: static-website-service
          servicePort: 80
      - path: /spring
        backend:
          serviceName: spring-restful-api-service          
          servicePort: 8080
