kubernetes_ingress/minikube_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: www.xmlunit.org
    http:
      paths:
      - path: /static
        backend:
          serviceName: static-website-service
          servicePort: 80
      - path: /spring
        backend:
          serviceName: spring-restful-api-service
          servicePort: 8080
